Added form to vote page Added link from home to vote

--- a/templates/index.html
+++ b/templates/index.html
@@ -48,7 +48,7 @@
       <div class="jumbotron">
         <h1>Moderate Retrospective</h1>
         <p class="lead">Click to start a new Retrospective</p>
-        <p><a class="btn btn-lg btn-success" href="#" role="button">Voting Season!</a></p>
+        <p><a class="btn btn-lg btn-success" href="{{ url_for('vote')}}" role="button">Voting Season!</a></p>
       </div>
 
 <!--       <div class="row marketing">
